--- a/package.json
+++ b/package.json
@@ -12,28 +12,27 @@
     "@vue/babel-preset-app": "4.5.9",
     "eslint-plugin-vue": "6.2.2",
     "firebase": "8.2.1",
-    "vue": "2.6.11",
-    "vue-router": "3.1.6",
-    "vuetify": "2.4.0",
+    "vue": "2.6.12",
+    "vue-router": "3.4.9",
+    "vuetify": "2.4.1",
     "vuex": "3.6.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "4.1.1",
-    "@vue/cli-service": "4.1.1",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli-plugin-eslint": "4.5.9",
+    "@vue/cli-service": "4.5.9",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-vue": "^7.4.1",
+    "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+      "browser": true,
+      "node": true,
+      "es6": true
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
+    "extends": ["plugin:vue/essential", "eslint:recommended"],
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
@@ -44,11 +43,7 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"],
   "keywords": [],
   "description": ""
 }
